Added social media icons, made two body columns equal in height using flex

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,9 +2,16 @@ p {
     margin: 0;
 }
 
+.main {
+    display: flex;
+}
+
 header {
     background-color: #33334D;
     margin: auto;
+    font-family: Lobster;
+    text-align: center;
+
 }
 
 footer {
@@ -31,16 +38,13 @@ footer {
 
 h1 {
     
-    text-align: center;
-    font-family: Lobster;
     font-size: 70px;
     margin-top: 10px;
     color: #e0e0eb;
 }
 
 #tagline {
-    text-align: center;
-    font-family: Lobster;
+
     font-size: 20px;
     padding: 20px;
     margin-top: -50px;
@@ -50,14 +54,14 @@ h1 {
 #left {
     background-color: #e0e0eb;
     width: 30%;
-    height: 720px;
+    /*height: 720px;*/
     float: left;
     display: inline-block;
     
 }
 
 #right {
-    height: 720px;
+    /*height: 720px;*/
     clear: right;
     display: inline-block;
     width: 65%;
@@ -106,5 +110,10 @@ li {
 
 a {
     text-decoration: underline;
-    color: #e0e0eb;
+    /*color: #e0e0eb*/;
+}
+
+.media{
+    height: 30px;
+    margin-bottom: 20px;
 }
