--- a/stylesheet.css
+++ b/stylesheet.css
@@ -26,10 +26,14 @@ footer {
     color:#e0e0eb; 
 }
 
+.itemContainer {
+    display: flex;
+    justify-content: space-around;
+}
+
 
 #photo {
     height: 250px;
-    background-color: #e0e0eb;
     width: 250px;
     border-radius: 50%;
     margin: auto;
@@ -53,15 +57,13 @@ h1 {
 
 #left {
     background-color: #e0e0eb;
-    width: 30%;
-    /*height: 720px;*/
+    width: 27%;
     float: left;
     display: inline-block;
     
 }
 
 #right {
-    /*height: 720px;*/
     clear: right;
     display: inline-block;
     width: 65%;
@@ -108,12 +110,23 @@ li {
     margin: 6px;
 }
 
-a {
+/*a {
     text-decoration: underline;
-    /*color: #e0e0eb*/;
-}
+}*/
 
 .media{
     height: 30px;
     margin-bottom: 20px;
+}
+
+h4 {
+
+    color: #e0e0eb;
+    font-size: 30px;
+}
+
+.interest {
+    border-radius: 50%;
+    height: 250px;
+    width: 250px;
 }
