--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,6 @@
 p {
     margin: 0;
+    font-family: Lora;
 }
 
 .main {
@@ -9,9 +10,9 @@ p {
 header {
     background-color: #33334D;
     margin: auto;
-    font-family: Lobster;
+    font-family: Lora;
+    font-weight: 100;
     text-align: center;
-
 }
 
 footer {
@@ -20,17 +21,16 @@ footer {
     width: 100%;
     padding-top: 30px;
     padding-bottom: 30px;
-    font-family: Lobster;
+    font-family: "Work Sans";
     font-size: 18px;
     text-align: center;
-    color:#e0e0eb; 
+    color: #e0e0eb;
 }
 
 .itemContainer {
     display: flex;
     justify-content: space-around;
 }
-
 
 #photo {
     height: 250px;
@@ -41,14 +41,18 @@ footer {
 }
 
 h1 {
-    
+    display: inline-block;
+    padding: 10px;
     font-size: 70px;
     margin-top: 10px;
     color: #e0e0eb;
+    letter-spacing: 3px;
+    font-family: "Work Sans";
+    text-transform: uppercase;
+    /*border: 4px solid #e0e0eb;*/
 }
 
 #tagline {
-
     font-size: 20px;
     padding: 20px;
     margin-top: -50px;
@@ -60,7 +64,6 @@ h1 {
     width: 27%;
     float: left;
     display: inline-block;
-    
 }
 
 #right {
@@ -69,25 +72,26 @@ h1 {
     width: 65%;
 }
 
-
 h2 {
-    font-family: Lobster;
+    font-family: "Work Sans";
     font-size: 30px;
     text-align: right;
     color: #33334D;
     margin-right: 35px;
     margin-top: 30px;
     margin-bottom: 30px;
+    text-transform: uppercase;
 }
 
 h3 {
     margin-top: 30px;
     margin-bottom: 30px;
-    font-family: Lobster;
+    font-family: "Work Sans";
     font-size: 30px;
     text-align: left;
     color: #33334D;
-    margin-left: 35px;    
+    margin-left: 35px;
+    text-transform: uppercase;
 }
 
 .left {
@@ -103,35 +107,31 @@ h3 {
 }
 
 .body {
-    margin-bottom: 25px;   
+    margin-bottom: 25px;
 }
 
 li {
-    margin: 6px;
+    margin: 4px;
+    font-family: Lora;
 }
 
-/*a {
-    text-decoration: underline;
-}*/
-
-.media{
+.media {
     height: 30px;
     margin-bottom: 20px;
 }
 
 h4 {
-
     color: #e0e0eb;
     font-size: 30px;
+    text-transform: uppercase;
 }
 
 .interest {
-
     position: relative;
     width: 100%;
 }
 
-.interest > img{
+.interest > img {
     border-radius: 50%;
     height: 250px;
     width: 250px;
